# stock-dip-notifier

./: .env.example  .gitignore  Dockerfile.analyze  Dockerfile.api  Dockerfile.ingest  Makefile  README.md  docker-compose.yml  ideas.txt  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_tables.py  0002_signals_alerts.py  0003_ai_overviews.py
infra/: lambda_function.py
mobile-web-client/: README.md  app.json  package-lock.json  package.json
mobile-web-client/app/: _layout.tsx  index.tsx  notifications.tsx
mobile-web-client/app/ticker/: [symbol].tsx
mobile-web-client/src/: types.ts
mobile-web-client/src/components/: LineChart.tsx  RecoveryDial.tsx  RecoveryTimeline.tsx  TernaryDriverPlot.tsx  ValueTrapMeter.tsx
mobile-web-client/src/lib/: api.ts  config.ts  format.ts  logos.ts  mockDrivers.ts  mockRecovery.ts  mockRecoveryTimeline.ts  mockSignals.ts
src/dipdetector/: __init__.py  config.py  tickers.py
src/dipdetector/ai/: __init__.py  lambda_client.py  overview_service.py
src/dipdetector/analyze/: __init__.py  current_dips.py  rules.py  run.py
src/dipdetector/api/: __init__.py  deps.py  main.py  schemas.py
tests/: test_alert_idempotency.py  test_analyst_recommendation.py  test_analyzer_rules.py  test_api_alerts.py  test_api_cors.py  test_api_dips.py  test_api_health.py  test_chart_intraday.py  test_current_dips_endpoint.py  test_dips_current_enrichment.py  test_ingest_upsert.py  test_massive_news.py  test_overview_endpoint.py  test_provider_interface.py  test_relative_returns.py  test_volume_spike.py
(+31 files in other folders)
