[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dipdetector"
version = "0.1.0"
description = "Stock Dip Notifier MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "SQLAlchemy>=2.0",
  "psycopg2-binary>=2.9",
  "alembic>=1.12",
  "yfinance>=0.2.30",
  "pandas>=2.0",
  "fastapi>=0.110",
  "uvicorn>=0.23",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "httpx>=0.25",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
